# not-quite-tiny-dfr

./: .gitignore  Cargo.toml  README.md  flake.nix
etc/systemd/system/: not-quite-tiny-dfr.service
etc/udev/rules.d/: 99-touchbar-not-quite-tiny-dfr.rules
nix/modules/nixos/: not-quite-tiny-dfr.nix
share/not-quite-tiny-dfr/: config.toml
share/not-quite-tiny-dfr/widgets/: battery.sh  battery_eta.sh  cpu_temp.sh  weather.sh
share/tiny-dfr/: config.toml
src/: backlight.rs  button.rs  config.rs  crash_bitmap.raw  gpu.rs  main.rs  media.rs  pixel_shift.rs  render.rs  sensors.rs  style.rs  uinput.rs  user.rs  widget.rs
