[package]
name = "not-quite-tiny-dfr"
version = "0.3.7"
edition = "2021"
license = "MIT AND Apache-2.0"
description = "A customizable dynamic function row daemon, forked from tiny-dfr"
homepage = "https://github.com/seojoonlee-dev/not-quite-tiny-dfr"
repository = "https://github.com/seojoonlee-dev/not-quite-tiny-dfr.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.22", default-features = false, features = ["png"] }
librsvg-rebind = "0.3"
pango = "0.22"
pangocairo = "0.22"
drm = "0.14"
anyhow = "1"
input = "0.9"
libc = "0.2"
input-linux = { version = "0.7", features = ["serde"] }
input-linux-sys = "0.9"
nix = { version = "0.29", features = ["event", "signal", "inotify", "user", "time"] }
privdrop = "0.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
freedesktop-icons = "0.4.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
udev = "0.9"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
